# sw-monsters

./: Cargo.toml
data/: fusions.json  monsters.json  shortcuts.ui  single.glade  single.glade~  ui.css
data/icons/essences/: º-.html
data/icons/essences/º-_files/: DIO-TOOLS-David1327-Version.js  game.js  game_0.css  game_1.css  game_2.css  game_3.css  game_4.css  game_5.css  game_6.css
src/: action.rs  app.rs  data_structs.rs  error.rs  main.rs  monster.rs  scraper.rs  teste.rs  utils.rs
src/data/: mod.rs  search.rs
src/data/structs/: collection.rs  essence.rs  mod.rs  monster.rs  skill.rs  stats.rs
src/gui/: header.rs  mod.rs
src/gui/views/: list.rs  mod.rs
src/gui/views/single/: essence.rs  mod.rs  skill.rs
src/header/: mod.rs  preferences.rs  search.rs  search_menu.rs  second_awakening_button.rs
src/threadpool/: controller.rs  mod.rs  thread.rs
src/traits/: activable_widget.rs  box_widget.rs  combo_box_widget.rs  container_widget.rs  data.rs  into_result.rs  label_widget.rs  mod.rs  monster.rs  scrolled_window_widget.rs  spinner_widget.rs
src/views/: collection.rs  fusions.rs  list.rs  loading.rs  mod.rs  search.rs  single.rs
src/widgets/: container.rs  external_image.rs  header.rs  list.rs  mod.rs  monster_row.rs  row.rs  search.rs  skill.rs
