[package]
name = "sw-monsters"
version = "0.1.0"
authors = ["Tiago Marques <tyimarques@gmail.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.7.0", features = ["v3_22"] }
gdk-pixbuf = "0.7.0"
gio = "0.7.0"
pango = "0.7.0"
glib = "0.8.2"
serde = {version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
libhandy = "0.4.0"
