[package]
name = "sw-monsters"
version = "0.1.0"
authors = ["Tiago Marques <tyimarques@gmail.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.8", features = ["v3_24"] }
gdk-pixbuf = "0.8"
gio = "0.8"
glib = "0.9"
pango = "0.8"
libhandy = { git = "https://gitlab.gnome.org/World/Rust/libhandy-rs.git" }
select = "0.4"
reqwest = "0.9"
regex = "1.3"
log = "0.4"
cascade = "0.1"
threadpool = "1.7"
