[package]
name = "sw-monsters"
version = "0.2.0"
authors = ["Tiago Marques <tyimarques@gmail.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.8", features = ["v3_24"] }
gdk-pixbuf = "0.8"
gio = "0.8"
glib = "0.9"
pango = "0.8"
libhandy = "0.5.0"
select = "0.4"
reqwest = "0.9"
regex = "1.3"
cascade = "0.1"
dyn-clone = "1.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive", "rc"]}
lazy_static = "1.4"


[[bin]]
name = "teste"
path = "src/teste.rs"